--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.vercel
+*.log
+*.pyc
+__pycache__
+db.sqlite3
+media
 
-# Dependencies
-/node_modules
-
-# Misc
-.DS_Store
-*.pem
-
-# Debug
-/npm-debug.log*
-/yarn-debug.log*
-/yarn-error.log*
-
-# Local ENV files
-/.env*.local
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/ 
